# MyWebsite

./: README.md  package-lock.json  package.json
chess/: .gitignore  Cargo.toml  README.md
chess/admin_console/: Cargo.toml
chess/admin_console/src/: lib.rs  suggestor.rs  validator.rs
chess/admin_console/src/commands/: base_commands.rs  chess_board_command.rs  chess_command.rs  chess_position_command.rs  chess_test_command.rs  (+3 more)
chess/backend/: .gitignore  Cargo.toml  build.rs  games.json  pending_game.json  players.json  users.json
chess/backend/src/: main.rs  message_types.rs  state.rs  storage.rs  util.rs
chess/backend/src/routes/: getboard.rs  getgame.rs  getvalidmoves.rs  mod.rs  newuser.rs  uservalid.rs  websocket.rs
chess/backend/src/utils/: fenutil.rs  mod.rs  moveutil.rs  userutil.rs
chess/chess_engine/src/: lib.rs  piece_features.rs  types.rs
chess/comlib/: Cargo.toml
chess/comlib/src/: lib.rs  message_types.rs
chess/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
chess/frontend/src/: main.css  main.tsx  main2.tsx
dyndns/: Cargo.toml  config.json
dyndns/src/: main.rs
frontend/my-app/: package-lock.json  package.json
frontend/my-app/src/: App.tsx
frontend/my-webapp/: package-lock.json  package.json
frontend/my-webapp/src/: index.tsx
frontend/my-website/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/my-website/public/: index.html
frontend/my-website/src/: main.tsx
main/: index.css  index.html
tictactoe/: README.md
tictactoe/backend/: Cargo.toml
tictactoe/backend/src/: main.rs
tictactoe/frontend/: package-lock.json  package.json
tictactoe/frontend/src/: main.tsx  vite-env.d.ts
(+121 files in other folders)
