[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "tracing", "macros"] }
futures-util = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
tower = "0.4.13"
comlib = { path = "../comlib" }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
rand = "0.8.5"

[build-dependencies]
comlib = { path = "../comlib" }
specta = { version = "1.0.5", features = ["export"] }
once_cell = "1.8"
