[package]
name = "comlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
specta = { version = "1.0.5", features = ["export"] }
once_cell = "1.8.0"
