[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
tower = "0.4.13"
tokio = { version = "1.33.0", features = ["full"] }
axum = { version = "0.6.20", features = ["ws", "tracing", "macros"] }
